[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "in1910-project3-random-walk"
version = "0.0.1"
description = "Library to compute pseudo ECG from bidomain and monodomain simulations"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}, {name = "Eirill Hauge" }, {name = "Mansur Dadajev" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["in1910", "random-walk", "labyrinth"]
dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
Source = "https://github.com/finsberg/in1910-project3-random-walk"
Tracker = "https://github.com/finsberg/in1910-project3-random-walk/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
    "pre-commit",
]
pypi = [
    "twine",
    "build",
]
docs = [
    "jupyter-book",
    "jupytext",
]
all = [
   "in1910-project3-random-walk[test]",
   "in1910-project3-random-walk[docs]",
   "in1910-project3-random-walk[pypi]",
   "in1910-project3-random-walk[dev]"
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = [
   "--cov=labyrinths",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]

testpaths = [
    "tests"
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
